# mordassistant

./: .gitignore  README.md  pyproject.toml
mordassistant/: __main__.py  app.py  initializations.py
mordassistant/commands/: __init__.py  hello.py  time.py
mordassistant/tools/: __init__.py  audio.py  command.py  recognizer.py
