[tool.poetry]
name = "mordassistant"
version = "0.1.0"
description = "Voice Assistant"
authors = ["Vladislav Kovalskyi <v.darknesssb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
